--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 	</div>
 
 
-	<p>csak mert csinálok egy próba pull requestet...</p>
+	<p>ja lol nem is kellett pull request, simán felment...</p>
 
 
 
